# trainstats

./: README.md  pyproject.toml
.streamlit/: config.toml
src/: trafikverket.py  trainstats.py
