[tool.poetry]
name = "trainstats"
version = "0.1.0"
description = ""
authors = ["Olof Beckman <olof@olofbeckman.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
streamlit-autorefresh = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
